# anyserve

./: .gitignore  .golangci.yml  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  config.yaml  go.mod  go.sum  mise.toml
.github/workflows/: anyserve-ci.yml  client-python-ci.yml  docs-pages.yml  go-ci.yml  go.yml  python-publish.yml  release.yml
anyserve/: .gitignore  Makefile  config.yaml  go.mod  go.sum  main.go
anyserve/cmd/: flags.go  init.go  main.go  queue.go  queue_create.go  queue_delete.go  queue_list.go  queue_stats.go  queuegroup.go  serve.go
anyserve/cmd/anyserve/: main.go
anyserve/internal/version/: version.go
anyserve/pkg/config/: config.go  const.go
anyserve/pkg/embedded_nats/: embedded_nats.go
anyserve/pkg/grpc_server/: grpc_server.go  interceptor.go
anyserve/pkg/grpc_service/: fetch_infer.go  infer.go  infer_stream.go  send_response.go  server_live.go  server_ready.go  service.go
anyserve/pkg/http_server/: healthz.go  logger.go  server.go
anyserve/pkg/logger/: logger.go
anyserve/pkg/meta/: base_interface.go  base_meta_interface.go  engine_interface.go  interface.go  meta_interface.go  nats.go  redis.go
anyserve/pkg/proto/: grpc_service.pb.go  grpc_service_grpc.pb.go
anyserve/pkg/queue/: interface.go
anyserve/pkg/server/: logger.go  server.go
anyserve/pkg/storage/: embed_nats.go  embedded_nats.go
anyserve/pkg/utils/: bytes.go  logger.go
api/anyserve/protos/: grpc_service.proto
client-python/: Makefile  pyproject.toml
client-python/proto/: grpc_service_pb2_grpc.py
client-python/src/client_python/: __init__.py
clients/python/: Cargo.toml  Makefile  README.md  main.py  pyproject.toml
clients/python/python/anyserve/: __init__.py  __init__.pyi  client.py  highlevel.py  highlevel.pyi
clients/python/src/: lib.rs
clients/python/src/anyserve/: grpc_service_pb2.py  grpc_service_pb2.pyi  grpc_service_pb2_grpc.py
clients/python/tests/: sdk_e2e.py  test_client.py  test_highlevel.py
clients/rust/: Cargo.toml
clients/rust/src/: main.rs
cmd/anyserve/: main.go
cmd/servelet/: main.go
console/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
console/src/: App.tsx  api.ts  app-constants.ts  format.ts  pane-inspector-details.tsx  pane-inspector-timeline.tsx  pane-inspector.tsx  pane-tables.tsx  panes.tsx  styles.css  types.ts  usePollingEffect.ts
crates/anyserve-bench/: Cargo.toml
crates/anyserve-bench/src/: main.rs
crates/anyserve-cli/: Cargo.toml
crates/anyserve-cli/src/: job_commands.rs  main.rs  serve_config.rs  serve_console.rs  serve_openai.rs  serve_openai_worker.rs  serve_runtime.rs
crates/anyserve-cli/src/job_commands/: args.rs  output.rs
crates/anyserve-cli/src/job_commands/output/: json.rs  shared.rs  text.rs
crates/anyserve-cli/src/serve_config/: file.rs  tests.rs
crates/anyserve-cli/src/serve_console/: api.rs  handlers.rs  snapshot.rs  tests.rs
crates/anyserve-cli/src/serve_openai/: handlers.rs  readiness.rs  state.rs  streaming.rs  tests.rs
crates/anyserve-cli/src/serve_openai/streaming/: output.rs  response.rs  waiters.rs
crates/anyserve-cli/src/serve_openai_worker/: config.rs  helpers.rs  runtime.rs  tests.rs
crates/anyserve-cli/src/serve_openai_worker/runtime/: execution.rs  heartbeat.rs
crates/anyserve-client/: Cargo.toml
crates/anyserve-client/src/: lib.rs
crates/anyserve-core/: Cargo.toml
crates/anyserve-core/src/: config.rs  consts.rs  frame.rs  kernel.rs  lib.rs  model.rs  notify.rs  scheduler.rs  service.rs  sql_store.rs  store.rs
crates/anyserve-core/src/meta/: mod.rs
crates/anyserve-core/tests/: grpc_e2e.rs  postgres_memory_persistence.rs  postgres_redis_integration.rs  sqlite_persistence.rs
crates/anyserve-proto/: Cargo.toml  build.rs
crates/anyserve-proto/protos/: grpc_service.proto
crates/anyserve-proto/src/: lib.rs
design/: create-gateway-wireframe.html
docs/: book.toml  pnpm-lock.yaml
docs/RFCs/: req_metadata.md
docs/src/: SUMMARY.md  architecture.md  create-gateway.md  index.md  ollama.md  performance-evaluation.md  testing.md  usage.md
examples/google-colab/: README.md  qwen3_anyserve.ipynb  qwen3_remote_worker.ipynb
examples/llm/: README.md
examples/ollama/: README.md  anyserve.sqlite.toml  anyserve.toml  worker.toml
examples/python/: .gitignore  README.md  pyproject.toml  submit.py  video_stream_client.py  video_stream_common.py  video_stream_worker.py  worker.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
pkg/config/: config.go
pkg/grpc_service/: server_live.go  server_ready.go
pkg/logger/: logger.go
pkg/meta/: interface.go
pkg/proto/: grpc_service.pb.go  grpc_service.proto  grpc_service_grpc.pb.go
pkg/server/: healthz.go  server.go
scripts/: install.ps1  install.sh  package-release.sh
