[workspace]
members = [
  "clients/python",
  "crates/anyserve-client",
  "crates/anyserve-cli",
  "crates/anyserve-core",
  "crates/anyserve-proto",
  "examples/rust",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/anyserve/anyserve"
version = "0.3.0"

[workspace.dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.7.9"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive", "env"] }
futures = "0.3.31"
http = "1.3.1"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
pyo3 = { version = "0.24.1", features = ["abi3-py312", "extension-module"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
toml = "0.8.23"
tonic = { version = "0.12.3", features = ["transport", "tls"] }
tonic-health = "0.12.3"
tonic-build = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
