[project]
name = "client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arcosx", email = "arcosx@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
