[package]
name = "anyserve-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
anyserve-client = { path = "../../crates/anyserve-client" }
pyo3.workspace = true
tokio.workspace = true
tonic.workspace = true
