[project]
name = "anyserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arcosx", email = "arcosx@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anyserve"]
