[project]
name = "anyserve"
version = "0.1.0"
description = "Rust-backed Python SDK for Anyserve"
readme = "README.md"
authors = [
    { name = "arcosx", email = "arcosx@outlook.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "anyserve._native"
python-source = "python"
