[package]
name = "anyserve-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
anyserve-client = { path = "../anyserve-client" }
clap.workspace = true
futures.workspace = true
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
