[package]
name = "anyserve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
anyserve-client = { path = "../anyserve-client" }
anyserve-core = { path = "../anyserve-core" }
anyserve-proto = { path = "../anyserve-proto" }
async-stream.workspace = true
axum = "0.7.9"
clap.workspace = true
futures.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml = "0.8.23"
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
