[package]
name = "anyserve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
anyserve-proto = { path = "../anyserve-proto" }
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }
