[package]
name = "anyserve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
anyserve-proto = { path = "../anyserve-proto" }
async-stream.workspace = true
async-trait.workspace = true
fs2.workspace = true
futures.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }
