[project]
name = "anyserve-python-examples"
version = "0.1.0"
description = "Local uv-managed environment for Anyserve Python examples"
requires-python = ">=3.12,<3.15"
dependencies = [
    "anyserve-runtime",
    "lap>=0.5.12",
    "opencv-python",
    "ultralytics",
]

[tool.uv.sources]
anyserve-runtime = { path = "../../clients/python" }
